# Time-Table-Scheduler

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: sample_exam_problem.json
modules/: __init__.py  class_scheduler.py  exam_scheduler.py
optimizer/: README.md  __init__.py  qisa.py
scripts/: analyze_reference_spreadsheets.py  run_exam_demo.py
tests/: test_break_boundary_behavior.py  test_class_scheduler.py  test_class_session_duration_and_breaks.py  test_compact_timetable_preference.py  test_exam_difficulty_preferences.py  test_exam_scheduler.py  test_main_break_split_preference.py  test_qisa.py  test_saved_schedules.py  test_student_group_edit_preserves_subjects.py  test_timetable_export.py  test_timetable_slot1_rendering.py  test_ui_break_separator.py  test_ui_class_timetable_page.py  test_ui_db.py  test_ui_exam_scheduler_page.py  test_ui_staff_allocation_page.py
ui/: app.py
ui/database/: __init__.py  crud.py  db.py  timetable.db
ui/pages/: academic_settings.py  class_timetable.py  electives.py  exam_scheduler.py  faculty.py  rooms.py  staff_allocation.py  students.py  subjects.py
ui/utils/: __init__.py  id_generator.py  schedule_cache.py  validators.py
utils/: __init__.py  timetable_export.py
